--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <joda-time.version>2.10</joda-time.version>
         <okhttp.version>3.11.0</okhttp.version>
         <okio.version>1.15.0</okio.version>
+
     </properties>
 
     <dependencies>
@@ -193,7 +194,11 @@
                 <artifactId>aliyun-java-sdk-dm</artifactId>
                 <version>${aliyun-java-sdk-dm.version}</version>
             </dependency>
-
+            <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>${project.parent.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
